    and build it, optionally also signing and uploading the result to an
    incoming queue (Closes: #479274)
  * debsign: Use "mv -f" instead of plain "mv" when stripping an existing GPG
    signature or updating the file sizes within the changes file before
    signing it, as is already done for moving the resulting signed files
    (Closes: #479569)

  [ James Vega ]
  * mk-build-deps:
    + Fix Depends generation when both Build-Depends and Build-Depends-Indep
      exist so that the last package of the former and the first package of
      the latter are not listed as one concatenated string.
    + Use the Source package name instead of the first listed Binary package
      when parsing a control file.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sat, 03 May 2008 19:59:06 +0100

devscripts (2.10.27) unstable; urgency=low

  * bts:
    + When reassigning bugs, CC the maintainer of the new package(s)
      (Closes: #478014)
    + Fix an uninitialised value warning when using claim and unclaim with
      no claim specified and $EMAIL and $DEBEMAIL unset
  * chdist: Add armel to the list of architectures in the bash completion
  * checkbashisms:
    + When rebuilding the list of bashisms to check, ensure it is based
      on whether the current file is a makefile, rather than whether the
      previous file was. Thanks to Raphael Geissert for the brown paper bag.
    + Match use of "SHELL=bash" as well as "SHELL=/bin/bash" in makefile mode
    + Improve heredoc detection to avoid triggering on "foo bar << x" whilst
      still matching 'cat <<"xyz"'
    + Add a variant on the "[ a == b ]" test
    + Enhance the "echo -e" test to also catch "echo -ne"
    + Add checks for "type", "time", "dirs" and $UID
    + Make several of the checks less prone to false positives
    + Re-enable the check for "complete"
  * dcmd:
    + Preserve a leading "./" on .dsc and .changes filenames (Closes: #478172)
    + Correctly handle packages with a section of "component/section"